- java 17 update - implementing naming conventions