@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.5.RELEASE</version>
+        <version>2.5.5</version>
         <relativePath/>
     </parent>
 
@@ -16,7 +16,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <modules>
-        <module>service</module>
+        <module>domain</module>
         <module>boot</module>
         <module>client.core</module>
         <module>controller</module>
@@ -24,9 +24,9 @@
     </modules>
 
     <properties>
-        <java.version>15</java.version>
-        <maven.compiler.source>15</maven.compiler.source>
-        <maven.compiler.target>15</maven.compiler.target>
+        <java.version>17</java.version>
+        <maven.compiler.source>17</maven.compiler.source>
+        <maven.compiler.target>17</maven.compiler.target>
 
         <openapi-generator.version>4.3.1</openapi-generator.version>
         <springfox.version>3.0.0</springfox.version>
@@ -39,11 +39,9 @@
         <mapstruct.version>1.4.1.Final</mapstruct.version>
         <jacoco-maven-plugin.version>0.8.6</jacoco-maven-plugin.version>
 
-        <spring-security-oauth2.version>2.5.0.RELEASE</spring-security-oauth2.version>
-        <spring-security-jwt.version>1.1.1.RELEASE</spring-security-jwt.version>
-        <nimbus-jose-jwt.version>7.3</nimbus-jose-jwt.version>
-
         <resilience4j-spring-boot2.version>1.6.1</resilience4j-spring-boot2.version>
+
+        <lombok.version>1.18.22</lombok.version>
     </properties>
 
     <packaging>pom</packaging>
@@ -53,7 +51,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-parent</artifactId>
-                <version>Hoxton.SR9</version>
+                <version>2020.0.3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -64,6 +62,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
         </dependency>
         <dependency>
             <groupId>org.mapstruct</groupId>
@@ -71,6 +70,10 @@
             <version>${mapstruct.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
@@ -82,16 +85,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- Security -->
-        <dependency>
-            <groupId>org.springframework.security.oauth</groupId>
-            <artifactId>spring-security-oauth2</artifactId>
-            <version>${spring-security-oauth2.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-test</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
@@ -101,9 +94,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
-                    <compilerArgs>--enable-preview</compilerArgs>
+                    <source>17</source>
+                    <target>17</target>
                     <annotationProcessorPaths>
                         <path>
                             <groupId>org.projectlombok</groupId>
@@ -153,9 +145,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
-                <configuration>
-                    <argLine>@{argLine} --enable-preview</argLine>
-                </configuration>
             </plugin>
         </plugins>
     </build>
